homework/5.kubernetes-network/redmine/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
