homework/5.kubernetes-network/redmine/redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: postgres
