homework/5.kubernetes-network/redmine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 89.208.198.147
    http:
      paths:
      - path: /
        pathType: Prefix        
        backend:
          service:
            name: redmine
            port:
              number: 80
